Bug #20067
assert in OSDMonitor::update_creating_pgs()
% Done:
0%
Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
0> 2017-05-24 00:16:55.014215 7ff569c02700 -1 /build/ceph-12.0.2-1656-g76d6d3a/src/osd/OSDMapMapping.h: In function 'void OSDMapMapping::get(pg_t, std::vector<int>*, int*, std::vector<int>*, int*) const' thread 7ff569c02700 time 2017-05-24 00:16:55.010663 /build/ceph-12.0.2-1656-g76d6d3a/src/osd/OSDMapMapping.h: 287: FAILED assert(p != pools.end()) ceph version 12.0.2-1656-g76d6d3a (76d6d3ac93e2a9fc648587ac26546212d6ba8d48) 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x10e) [0x7ff57222ffde] 2: (OSDMonitor::update_creating_pgs()+0x80e) [0x7ff5720ba0be] 3: (C_UpdateCreatingPGs::finish(int)+0x66) [0x7ff572110176] 4: (Context::complete(int)+0x9) [0x7ff57205ac99] 5: (ParallelPGMapper::WQ::_process(ParallelPGMapper::Item*, ThreadPool::TPHandle&)+0x6c) [0x7ff57231838c] 6: (ThreadPool::worker(ThreadPool::WorkThread*)+0xb65) [0x7ff572236ae5] 7: (ThreadPool::WorkThread::entry()+0x10) [0x7ff572237ab0] 8: (()+0x8184) [0x7ff571061184] 9: (clone()+0x6d) [0x7ff56f92337d] NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.
/a/sage-2017-05-23_22:17:12-rados-wip-bigbang---basic-smithi/1222164/remote/smithi062/log/ceph-mon.a.log.gz
Related issues
History
#1 Updated by Kefu Chai over 5 years ago
/a/sage-2017-05-23_22:17:12-rados-wip-bigbang---basic-smithi/1222226/remote/smithi198/log/ceph-mon.c.log.gz
#2 Updated by Kefu Chai over 5 years ago
- Subject changed from (bigbang) assert in OSDMonitor::update_creating_pgs() to assert in OSDMonitor::update_creating_pgs()
/a/yuriw-2017-05-25_00:40:22-rados-wip-yuri-testing_2017_5_24-distro-basic-smithi/1225508/remote/smithi188/log/ceph-mon.c.log.gz
also in master, yuri's test branch does not contain any changes related to creating_pgs.
#3 Updated by Kefu Chai over 5 years ago
- Assignee set to Kefu Chai
- Priority changed from Normal to Immediate
#4 Updated by Kefu Chai over 5 years ago
- Status changed from New to Fix Under Review
#5 Updated by Sage Weil over 5 years ago
- Status changed from Fix Under Review to Resolved
#6 Updated by Kefu Chai over 5 years ago
- Status changed from Resolved to Fix Under Review
#7 Updated by Sage Weil over 5 years ago
- Status changed from Fix Under Review to Resolved
#8 Updated by Yuri Weinstein over 5 years ago
- Related to Bug #20632: hammer->jewel: "FAILED assert(p != pools.end())" added