mon/OSDMonitor: print more log when updating creating_pgs

see-also: http://tracker.ceph.com/issues/20067
Signed-off-by: Kefu Chai <kchai@redhat.com>